--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -10,6 +10,7 @@
         [(ngModel)]="user.username"
         [isEnabled]="!isAuthenticating"
         autocorrect="false"
+        required 
         autocapitalizationType="none"
         row="0" >
   </TextField>
