--- a/platforms/android/src/main/assets/app/srtdetails/srtdetails.component.css
+++ b/platforms/android/src/main/assets/app/srtdetails/srtdetails.component.css
@@ -17,3 +17,14 @@
   font-size: 16;
   font-weight: bold;
 }
+.srtgrid{
+
+    margin-left: 15;
+    margin-right: 15
+
+
+}
+.srtlabel{
+    text-align: center;
+    font-size: 10;
+}
