--- a/app/clientMaster/clientmaster.component.html
+++ b/app/clientMaster/clientmaster.component.html
@@ -21,12 +21,12 @@
         <Image  col="0" row ="0" src="res://ic_briefcase"  (tap)="gotoSRTPage()" > </Image>
         <!--(tap)="gotoSRTPage()"-->
         <Label class= "cmlabel" textWrap="true" col="0" row="1" text="SRT" horizontalAlignment="center" verticalAlignment="center"></Label>
-        <Image  col="1" row ="0" src="res://ic_blog" > </Image>
+        <Image  col="1" row ="0" src="res://ic_blog" (tap)="gotoCalenderPage()" > </Image>
         <Label class= "cmlabel" textWrap="true" col="1" row="1" text="Calender" horizontalAlignment="center" verticalAlignment="center"></Label>
         <Image  col="0" row ="2" src="res://ic_reminder" > </Image>
         <Label class= "cmlabel" textWrap="true" col="0" row="3" text="Reminder" horizontalAlignment="center" verticalAlignment="center"></Label>
-        <Image  col="1" row ="2" src="res://ic_announcement" > </Image>
-        <Label class= "cmlabel" textWrap="true" col="1" row="3" text="Announcement" horizontalAlignment="center" verticalAlignment="center"></Label>
+        <Image  col="1" row ="2" src="res://ic_announcement" (tap)="gotoAnnouncementPage()" > </Image>
+        <Label class= "cmlabel" textWrap="true" col="1" row="3" text="Announcement" horizontalAlignment="center" verticalAlignment="center" ></Label>
     <!--<StackLayout class="  btn-sq-lg  " col="0" row="0" (tap)="gotoSRTPage()">
 
         <Image  col="0" row ="1" src="res://ic_briefcase" > </Image>
