--- a/platforms/android/src/main/assets/app/clientMaster/clientmaster.component.html
+++ b/platforms/android/src/main/assets/app/clientMaster/clientmaster.component.html
@@ -1,12 +1,7 @@
 
 <StackLayout>
 <GridLayout columns="*,*" rows="*,*" width="300" height="300"  >
-    <Button class="btn btn-sq-lg btn-primary " 
-            text="SRT" 
-            col="0" 
-            row="0"
-            (tap)="loadsrt()"
-            ></Button>
+    <Button class="btn btn-sq-lg btn-primary " text="SRT" col="0" row="0" (tap)="gotoSRTPage()"></Button>
     <Button class="btn btn-sq-lg btn-primary " text="Calender" col="1" row="0" ></Button>
     <Button class="btn btn-sq-lg btn-primary " text="Announcement" col="0" row="1" ></Button>
     <Button class="btn btn-sq-lg btn-primary " text="Reminder" col="1" row="1" ></Button>
